Hamburger Menu operates correctly on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,31 +7,10 @@
 :root {
     --textPink: rgb(193, 28, 214);
     font-size: 100%;
-    --imgWidth: 40vw;
-    --imgHeight: 40vh;
 }
 
-header {
-    display:inline-block;
+#h1Colour {
     color:var(--textPink);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    padding: 20px;
-    width:100%;
-    background-color: #2a607c;
-}
-
-.h1Colour {
-    font-size: 3em;
-    color:var(--textPink);
-    font-weight:400;
-    margin-bottom: .5em;
-}
-
-.h2Colour {
-    font-size: 1.75em;
-    color:white;
-    margin-bottom: .5714em;
 }
 
 h2{
@@ -73,7 +52,7 @@ h3{
     width:100%;
 }
 
-#aboutMe a{
+a{
     color:var(--textPink);
     font-size:1.5rem;
 } 
@@ -86,7 +65,6 @@ h3{
 }
 
 #heroImg{
-    width: 100vw;
     height: 100vh; 
     background-position: center;
     background-size: cover;
@@ -96,13 +74,6 @@ h3{
 
 a:hover {
     color:black;
-}
-
-footer {
-    width:100%;
-    padding: 20px;
-    text-align: center;
-    background-color: #2a607c;
 }
 
 .icons {
@@ -120,27 +91,6 @@ footer {
    justify-content: space-evenly;
     color:white;
 }
-
-.fa-facebook { 
-    list-style-type: none;
-    margin-right:22px; 
-} 
-.fa-linkedin{
-    list-style-type: none;
-    margin-right:15px; 
-}
-.fa-twitter {
-    list-style-type: none;
-    margin-right:15px; 
-}
-.fa-instagram {
-    list-style-type: none;
-    margin-right:15px; 
-}
-.fa-envelope {
-    margin-right:10px; 
-}
-
 
 @keyframes example {
     from {background-color:yellow;}
